Added the template for an Art select menu

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <div id="arts">
                     <div id="masterArts">
                         <div id="artContainerLeft">
-                            <div class="artSlot"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 1"></div>
+                            <div class="artSlot" id="art-agnus"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 1"></div>
                             <h1 class="info-text-2">Blank</h1>
                         </div>
                         <div id="artContainerRight">
@@ -241,6 +241,19 @@
                         <div id="artContainerLeft">
                             <div class="artSlot"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 3"></div>
                             <h1 class="info-text-2">Blank</h1>
+                        </div>
+                    </div>
+                    <div class="classMenu" id="art-agnus-modal">
+                        <div class="classMenuContent">
+                            <header class="classMenuHeader">
+                                <h2>Agnus Art Select</h2>
+                                <span class="close" id="art-agnus-close">&times;</span>
+                            </header>
+                            <div class="class-list">
+                                <div class="modal-icon" id="art-select"><img src="img\arts\agnus\artAgnusBlank1.png" alt="Agnus Art Icon"></div>
+                                <div class="modal-icon" id="art-select"><img src="img\arts\agnus\artAgnusBlank1.png" alt="Agnus Art Icon"></div>
+                                <div class="modal-icon" id="art-select"><img src="img\arts\agnus\artAgnusBlank1.png" alt="Agnus Art Icon"></div>
+                            </div>
                         </div>
                     </div>
                     <div id="classArts">
