--- a/index.html
+++ b/index.html
@@ -231,15 +231,15 @@
                 <div id="arts">
                     <div id="masterArts">
                         <div id="artContainerLeft">
-                            <div class="artSlot" id="art-agnus"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 1"></div>
+                            <div class="artSlot" onclick="openArtMenu(this)" data-art-type="agnus"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 1"></div>
                             <h1 class="info-text-2">Blank</h1>
                         </div>
                         <div id="artContainerRight">
-                            <div class="artSlot"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 2"></div>
+                            <div class="artSlot" onclick="openArtMenu(this)" data-art-type="agnus"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 2"></div>
                             <h1 class="info-text-2">Blank</h1>
                         </div>
                         <div id="artContainerLeft">
-                            <div class="artSlot"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 3"></div>
+                            <div class="artSlot" onclick="openArtMenu(this)" data-art-type="agnus"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 3"></div>
                             <h1 class="info-text-2">Blank</h1>
                         </div>
                     </div>
@@ -260,21 +260,34 @@
                         <div id="normalArts">
                             <div id="artContainerRight">
                                 <h1 class="info-text-2">Blank</h1>
-                                <div class="artSlot"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 1"></div>
+                                <div class="artSlot" onclick="openArtMenu(this)" data-art-type="keves"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 1"></div>
                             </div>
                             <div id="artContainerLeft">
                                 <h1 class="info-text-2">Blank</h1>
-                                <div class="artSlot"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 2"></div>
+                                <div class="artSlot" onclick="openArtMenu(this)" data-art-type="keves"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 2"></div>
                             </div>
                             <div id="artContainerRight">
                                 <h1 class="info-text-2">Blank</h1>
-                                <div class="artSlot"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 3"></div>
+                                <div class="artSlot" onclick="openArtMenu(this)" data-art-type="keves"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 3"></div>
                             </div>
                         </div>
                         <div id="artContainerLeft">
                             <div id="talentArt">
                                 <div class="talentSlot"><img src="img\arts\keves\artKevesBlank.png" alt="Talent Art"></div>
                                 <h1 class="info-text-2">Blank</h1>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="classMenu" id="art-keves-modal">
+                        <div class="classMenuContent">
+                            <header class="classMenuHeader">
+                                <h2>Keves Art Select</h2>
+                                <span class="close" id="art-keves-close">&times;</span>
+                            </header>
+                            <div class="class-list">
+                                <div class="modal-icon" id="art-select"><img src="img\arts\keves\artKevesBlank1.png" alt="Keves Art Icon"></div>
+                                <div class="modal-icon" id="art-select"><img src="img\arts\keves\artKevesBlank1.png" alt="Keves Art Icon"></div>
+                                <div class="modal-icon" id="art-select"><img src="img\arts\keves\artKevesBlank1.png" alt="Keves Art Icon"></div>
                             </div>
                         </div>
                     </div>
