--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
     </head>
     <body>
@@ -70,53 +71,55 @@
                 <div id="statuses">
                     <h1 class="info-text-3">Player Buffs</h1>
                     <div class="buffs">
-                        <div class="buffIcon"><img src="img\statuses\buffs\attack-up.png" alt="Attack Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\defense-up.png" alt="Defense Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\accuracy-up.png" alt="Accuracy Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\evasion-up.png" alt="Evasion Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\critical-rate-up.png" alt="Critical Rate Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\critical-hit-plus.png" alt="Critical Hit Plus"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\power-charge.png" alt="Power Charge"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\armor-veil.png" alt="Armor Veil"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\attack-up.png" data-toggle="tooltip" data-placement="top" title="Attack Up" alt="Attack Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\defense-up.png" data-toggle="tooltip" data-placement="top" title="Defense Up" alt="Defense Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\accuracy-up.png" data-toggle="tooltip" data-placement="top" title="Accuracy Up" alt="Accuracy Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\evasion-up.png" data-toggle="tooltip" data-placement="top" title="Evasion Up" alt="Evasion Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\critical-rate-up.png" data-toggle="tooltip" data-placement="top" title="Critical Rate Up" alt="Critical Rate Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\critical-hit-plus.png" data-toggle="tooltip" data-placement="top" title="Critical Hit Plus" alt="Critical Hit Plus"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\power-charge.png" data-toggle="tooltip" data-placement="top" title="Power Charge" alt="Power Charge"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\armor-veil.png" data-toggle="tooltip" data-placement="top" title="Armor Veil" alt="Armor Veil"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\awakening.png" data-toggle="tooltip" data-placement="top" title="Awakening" alt="Awakening"></div>
                     </div>
                     <h1 class="info-text-3">Player Debuffs</h1>
                     <div class="buffs">
-                        <div class="buffIcon"><img src="img\statuses\debuffs\attack-down.png" alt="Attack Down"></div>
-                        <div class="buffIcon"><img src="img\statuses\debuffs\physical-defense-down.png" alt="Physical Defense Down"></div>
-                        <div class="buffIcon"><img src="img\statuses\debuffs\ether-defense-down.png" alt="Ether Defense Down"></div>
-                        <div class="buffIcon"><img src="img\statuses\debuffs\accuracy-down.png" alt="Accuracy Down"></div>
-                        <div class="buffIcon"><img src="img\statuses\debuffs\evasion-down.png" alt="Evasion Down"></div>
-                        <div class="buffIcon"><img src="img\statuses\debuffs\flame-clock-low.png" alt="Flame Clock Low"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\attack-down.png" data-toggle="tooltip" data-placement="top" title="Attack Down" alt="Attack Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\physical-defense-down.png" data-toggle="tooltip" data-placement="top" title="Physical Defense Down" alt="Physical Defense Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\ether-defense-down.png" data-toggle="tooltip" data-placement="top" title="Ether Defense Down" alt="Ether Defense Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\accuracy-down.png" data-toggle="tooltip" data-placement="top" title="Accuracy Down" alt="Accuracy Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\evasion-down.png" data-toggle="tooltip" data-placement="top" title="Evasion Down" alt="Evasion Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\flame-clock-low.png" data-toggle="tooltip" data-placement="top" title="Flame Clock Low" alt="Flame Clock Low"></div>
                     </div>
                     <h1 class="info-text-3">Enemy Buffs</h1>
                     <div class="buffs">
-                        <div class="buffIcon"><img src="img\statuses\buffs\attack-up.png" alt="Attack Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\defense-up.png" alt="Defense Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\accuracy-up.png" alt="Accuracy Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\evasion-up.png" alt="Evasion Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\critical-rate-up.png" alt="Critical Rate Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\critical-hit-plus.png" alt="Critical Hit Plus"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\power-charge.png" alt="Power Charge"></div>
-                        <div class="buffIcon"><img src="img\statuses\buffs\armor-veil.png" alt="Armor Veil"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\attack-up.png" data-toggle="tooltip" data-placement="top" title="Attack Up" alt="Attack Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\defense-up.png" data-toggle="tooltip" data-placement="top" title="Defense Up" alt="Defense Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\accuracy-up.png" data-toggle="tooltip" data-placement="top" title="Accuracy Up" alt="Accuracy Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\evasion-up.png" data-toggle="tooltip" data-placement="top" title="Evasion Up" alt="Evasion Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\critical-rate-up.png" data-toggle="tooltip" data-placement="top" title="Critical Rate Up" alt="Critical Rate Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\critical-hit-plus.png" data-toggle="tooltip" data-placement="top" title="Critical Hit Plus" alt="Critical Hit Plus"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\power-charge.png" data-toggle="tooltip" data-placement="top" title="Power Charge" alt="Power Charge"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\armor-veil.png" data-toggle="tooltip" data-placement="top" title="Armor Veil" alt="Armor Veil"></div>
+                        <div class="buffIcon"><img src="img\statuses\buffs\awakening.png" data-toggle="tooltip" data-placement="top" title="Awakening" alt="Awakening"></div>
                     </div>
                     <h1 class="info-text-3">Enemy Debuffs</h1>
                     <div class="buffs">
-                        <div class="buffIcon"><img src="img\statuses\debuffs\attack-down.png" alt="Attack Down"></div>
-                        <div class="buffIcon"><img src="img\statuses\debuffs\physical-defense-down.png" alt="Physical Defense Down"></div>
-                        <div class="buffIcon"><img src="img\statuses\debuffs\ether-defense-down.png" alt="Ether Defense Down"></div>
-                        <div class="buffIcon"><img src="img\statuses\debuffs\accuracy-down.png" alt="Accuracy Down"></div>
-                        <div class="buffIcon"><img src="img\statuses\debuffs\evasion-down.png" alt="Evasion Down"></div>
-                        <div class="buffIcon"><img src="img\statuses\debuffs\reduce-all.png" alt="Reduce All"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\attack-down.png" data-toggle="tooltip" data-placement="top" title="Attack Down" alt="Attack Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\physical-defense-down.png" data-toggle="tooltip" data-placement="top" title="Physical Defense Down" alt="Physical Defense Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\ether-defense-down.png" data-toggle="tooltip" data-placement="top" title="Ether Defense Down" alt="Ether Defense Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\accuracy-down.png" data-toggle="tooltip" data-placement="top" title="Accuracy Down" alt="Accuracy Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\evasion-down.png" data-toggle="tooltip" data-placement="top" title="Evasion Down" alt="Evasion Down"></div>
+                        <div class="buffIcon"><img src="img\statuses\debuffs\reduce-all.png" data-toggle="tooltip" data-placement="top" title="Reduce All" alt="Reduce All"></div>
                     </div>
                     <h1 class="info-text-3">Fields</h1>
                     <div class="buffs">
-                        <div class="buffIcon"><img src="img\statuses\fields\up.png" alt="Attack Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\fields\up.png" alt="Defense Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\fields\up.png" alt="Evasion Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\fields\up.png" alt="Critical Rate Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\fields\up.png" alt="Armor Veil"></div>
-                        <div class="buffIcon"><img src="img\statuses\fields\art-follow-up.png" alt="Art Follow-Up"></div>
-                        <div class="buffIcon"><img src="img\statuses\fields\defender.png" alt="Defender"></div>
+                        <div class="buffIcon"><img src="img\statuses\fields\up.png" data-toggle="tooltip" data-placement="top" title="Attack Up" alt="Attack Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\fields\up.png" data-toggle="tooltip" data-placement="top" title="Defense Up" alt="Defense Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\fields\up.png" data-toggle="tooltip" data-placement="top" title="Evasion Up" alt="Evasion Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\fields\up.png" data-toggle="tooltip" data-placement="top" title="Critical Rate Up" alt="Critical Rate Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\fields\up.png" data-toggle="tooltip" data-placement="top" title="Armor Veil" alt="Armor Veil"></div>
+                        <div class="buffIcon"><img src="img\statuses\fields\art-follow-up.png" data-toggle="tooltip" data-placement="top" title="Art Follow-Up" alt="Art Follow-Up"></div>
+                        <div class="buffIcon"><img src="img\statuses\fields\defender.png" data-toggle="tooltip" data-placement="top" title="Defender" alt="Defender"></div>
                     </div>
                 </div>
                 <div id="equipment">
@@ -148,6 +151,7 @@
                                     <div class="modal-icon" id="class-select"><img src="img\classes\MedicGunner.png" alt="Class Icon"></div>
                                     <div class="modal-icon" id="class-select"><img src="img\classes\Tactician.png" alt="Class Icon"></div>
                                     <div class="modal-icon" id="class-select"><img src="img\classes\HeavyGuard.png" alt="Class Icon"></div>
+                                    <div class="modal-icon" id="class-select"><img src="img\classes\Ogre.png" alt="Class Icon"></div>
                                     <div class="modal-icon" id="class-select"><img src="img\classes\FlashFencer.png" alt="Class Icon"></div>
                                     <div class="modal-icon" id="class-select"><img src="img\classes\WarMedic.png" alt="Class Icon"></div>
                                     <div class="modal-icon" id="class-select"><img src="img\classes\GuardianCommander.png" alt="Class Icon"></div>
@@ -296,5 +300,14 @@
         </section>
 
         <script src="src/index.js"></script>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+        <script>
+            $(function () {
+                $('[data-toggle="tooltip"]').tooltip();
+            });
+        </script>
     </body>
 </html>
