Changed the Class and Hero modals to have items added via createElement and appendChild in JavaScript

--- a/index.html
+++ b/index.html
@@ -145,35 +145,7 @@
                                     <h2>Class Select</h2>
                                     <span class="close" id="class-close">&times;</span>
                                 </header>
-                                <div class="class-list">
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Swordfighter.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Zephyr.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\MedicGunner.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Tactician.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\HeavyGuard.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Ogre.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\FlashFencer.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\WarMedic.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\GuardianCommander.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Thaumaturge.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Yumsmith.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\FullMetalJaguar.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Strategos.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Stalker.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\LoneExile.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Incursor.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\LostVanguard.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Signifer.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Soulhacker.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\MartialArtist.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Troubadour.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Seraph.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\MachineAssassin.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Lifesage.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\RoyalSummoner.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\NoponicChampion.png" alt="Class Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\classes\Lapidarist.png" alt="Class Icon"></div>
-                                </div>
+                                <div class="class-list" id="classList"></div>
                             </div>
                         </div>
                         <div class="heroMenu" id="heroModal">
@@ -182,31 +154,7 @@
                                     <h2>Hero Select</h2>
                                     <span class="close" id="hero-close">&times;</span>
                                 </header>
-                                <div class="class-list">
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\ethel-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\valdi-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\zeon-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\teach-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\riku-manana-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\gray-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\isurd-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\juniper-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\ashera-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\alexandria-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\monica-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\fiona-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\triton-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\ghondor-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\miyabi-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\cammuravi-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\segiri-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\nia-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\melia-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\ino-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\masha-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\shulk-select.png" alt="Hero Icon"></div>
-                                    <div class="modal-icon" id="class-select"><img src="img\heroes\rex-select.png" alt="Hero Icon"></div>
-                                </div>
+                                <div class="class-list" id="heroList"></div>
                             </div>
                         </div>
                         <div id="classInfo">
