--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="icon" id="buttonTaion" onclick="menuSwap(this)" data-character-type="party"><img src="img\party\TaionParty.png" alt="Icon 4"></div>
                     <div class="icon" id="buttonLanz" onclick="menuSwap(this)" data-character-type="party"><img src="img\party\LanzParty.png" alt="Icon 5"></div>
                     <div class="icon" id="buttonSena" onclick="menuSwap(this)" data-character-type="party"><img src="img\party\SenaParty.png" alt="Icon 6"></div>
-                    <div class="icon" id="buttonHero" onclick="menuSwap(this)" data-character-type="hero"><img src="img\party\heroes\EthelParty.png" alt="Icon 7"></div>
+                    <div class="icon" onclick="menuSwap(this)" data-character-type="hero"><img src="img\party\heroes\EthelParty.png" id="buttonHero" alt="Icon 7"></div>
                 </div>
                 <div id="ouroboros">
                     <div class="icon" id="buttonNoahOuroboros"><img src="img\party\ouroboros\NoahOuroborosParty.png" alt="Icon 1"></div>
