Added a toggle for changing the background, may be used for Future Redeemed party members later

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
                     <div class="icon" id="buttonSena" onclick="menuSwap(this)" data-character-type="party"><img src="img\party\SenaParty.png" alt="Icon 6"></div>
                     <div class="icon" onclick="menuSwap(this)" data-character-type="hero"><img src="img\party\heroes\EthelParty.png" id="buttonHero" alt="Icon 7"></div>
                 </div>
+                <div id="fr-toggle">
+                    <div class="fr-button" id="fr-toggle-button"><img src="img\fr-toggle.png" alt="Future Redeemed Toggle"></div>
+                </div>
                 <div id="ouroboros">
                     <div class="icon" id="buttonNoahOuroboros"><img src="img\party\ouroboros\NoahOuroborosParty.png" alt="Icon 1"></div>
                     <div class="icon" id="buttonMioOuroboros"><img src="img\party\ouroboros\MioOuroborosParty.png" alt="Icon 2"></div>
