Added addition tooltips for party members. Added smoother background image transition. Darkened the Future Redeemed background

--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
         <section id="statCalculator">
             <section id="party">
                 <div id="characters">
-                    <div class="icon" id="buttonNoah" onclick="menuSwap(this)" data-character-type="party"><img src="img\party\NoahParty.png" alt="Icon 1"></div>
-                    <div class="icon" id="buttonMio" onclick="menuSwap(this)" data-character-type="party"><img src="img\party\MioParty.png" alt="Icon 2"></div>
-                    <div class="icon" id="buttonEunie" onclick="menuSwap(this)" data-character-type="party"><img src="img\party\EunieParty.png" alt="Icon 3"></div>
-                    <div class="icon" id="buttonTaion" onclick="menuSwap(this)" data-character-type="party"><img src="img\party\TaionParty.png" alt="Icon 4"></div>
-                    <div class="icon" id="buttonLanz" onclick="menuSwap(this)" data-character-type="party"><img src="img\party\LanzParty.png" alt="Icon 5"></div>
-                    <div class="icon" id="buttonSena" onclick="menuSwap(this)" data-character-type="party"><img src="img\party\SenaParty.png" alt="Icon 6"></div>
-                    <div class="icon" onclick="menuSwap(this)" data-character-type="hero"><img src="img\party\heroes\EthelParty.png" id="buttonHero" alt="Icon 7"></div>
+                    <div class="icon" id="buttonNoah" onclick="menuSwap(this)" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Noah"><img src="img\party\NoahParty.png" alt="Icon 1"></div>
+                    <div class="icon" id="buttonMio" onclick="menuSwap(this)" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Mio"><img src="img\party\MioParty.png" alt="Icon 2"></div>
+                    <div class="icon" id="buttonEunie" onclick="menuSwap(this)" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Eunie"><img src="img\party\EunieParty.png" alt="Icon 3"></div>
+                    <div class="icon" id="buttonTaion" onclick="menuSwap(this)" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Taion"><img src="img\party\TaionParty.png" alt="Icon 4"></div>
+                    <div class="icon" id="buttonLanz" onclick="menuSwap(this)" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Lanz"><img src="img\party\LanzParty.png" alt="Icon 5"></div>
+                    <div class="icon" id="buttonSena" onclick="menuSwap(this)" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Sena"><img src="img\party\SenaParty.png" alt="Icon 6"></div>
+                    <div class="icon" id="buttonHero" onclick="menuSwap(this)" data-character-type="hero" data-toggle="tooltip" data-placement="bottom" title="Ethel"><img src="img\party\heroes\EthelParty.png" id="buttonHeroImg" alt="Icon 7"></div>
                 </div>
                 <div id="fr-toggle">
                     <div class="fr-button" id="fr-toggle-button"><img src="img\fr-toggle.png" alt="Future Redeemed Toggle"></div>
                 </div>
                 <div id="ouroboros">
-                    <div class="icon" id="buttonNoahOuroboros"><img src="img\party\ouroboros\NoahOuroborosParty.png" alt="Icon 1"></div>
-                    <div class="icon" id="buttonMioOuroboros"><img src="img\party\ouroboros\MioOuroborosParty.png" alt="Icon 2"></div>
-                    <div class="icon" id="buttonEunieOuroboros"><img src="img\party\ouroboros\EunieOuroborosParty.png" alt="Icon 3"></div>
-                    <div class="icon" id="buttonTaionOuroboros"><img src="img\party\ouroboros\TaionOuroborosParty.png" alt="Icon 4"></div>
-                    <div class="icon" id="buttonLanzOuroboros"><img src="img\party\ouroboros\LanzOuroborosParty.png" alt="Icon 5"></div>
-                    <div class="icon" id="buttonSenaOuroboros"><img src="img\party\ouroboros\SenaOuroborosParty.png" alt="Icon 6"></div>
+                    <div class="icon" id="buttonNoahOuroboros" data-toggle="tooltip" data-placement="bottom" title="Noah (Ouroboros)"><img src="img\party\ouroboros\NoahOuroborosParty.png" alt="Icon 1"></div>
+                    <div class="icon" id="buttonMioOuroboros" data-toggle="tooltip" data-placement="bottom" title="Mio (Ouroboros)"><img src="img\party\ouroboros\MioOuroborosParty.png" alt="Icon 2"></div>
+                    <div class="icon" id="buttonEunieOuroboros" data-toggle="tooltip" data-placement="bottom" title="Eunie (Ouroboros)"><img src="img\party\ouroboros\EunieOuroborosParty.png" alt="Icon 3"></div>
+                    <div class="icon" id="buttonTaionOuroboros" data-toggle="tooltip" data-placement="bottom" title="Taion (Ouroboros)"><img src="img\party\ouroboros\TaionOuroborosParty.png" alt="Icon 4"></div>
+                    <div class="icon" id="buttonLanzOuroboros" data-toggle="tooltip" data-placement="bottom" title="Lanz (Ouroboros)"><img src="img\party\ouroboros\LanzOuroborosParty.png" alt="Icon 5"></div>
+                    <div class="icon" id="buttonSenaOuroboros" data-toggle="tooltip" data-placement="bottom" title="Sena (Ouroboros)"><img src="img\party\ouroboros\SenaOuroborosParty.png" alt="Icon 6"></div>
                 </div>
             </section>
             <section id="center">
