--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <div class="classMenu" id="classModal">
                             <div class="classMenuContent">
                                 <header class="classMenuHeader">
-                                    <h2>Class Select</h2>
+                                    <h2>Menu</h2>
                                     <span class="close" id="class-close">&times;</span>
                                 </header>
                                 <div class="class-list" id="classList"></div>
@@ -177,15 +177,15 @@
                 <div id="arts">
                     <div id="masterArts">
                         <div id="artContainerLeft">
-                            <div class="artSlot" onclick="openArtMenu(this)" data-art-type="agnus"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 1"></div>
+                            <div class="artSlot" data-art-type="agnus"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 1"></div>
                             <h1 class="info-text-2">Blank</h1>
                         </div>
                         <div id="artContainerRight">
-                            <div class="artSlot" onclick="openArtMenu(this)" data-art-type="agnus"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 2"></div>
+                            <div class="artSlot" data-art-type="agnus"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 2"></div>
                             <h1 class="info-text-2">Blank</h1>
                         </div>
                         <div id="artContainerLeft">
-                            <div class="artSlot" onclick="openArtMenu(this)" data-art-type="agnus"><img src="img\arts\agnus\artAgnusBlank.png" alt="Master Art 3"></div>
+                            <div class="artSlot" data-art-type="agnus"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 3"></div>
                             <h1 class="info-text-2">Blank</h1>
                         </div>
                     </div>
@@ -196,9 +196,9 @@
                                 <span class="close" id="art-agnus-close">&times;</span>
                             </header>
                             <div class="class-list">
-                                <div class="modal-icon" id="art-select"><img src="img\arts\agnus\artAgnusBlank1.png" alt="Agnus Art Icon"></div>
-                                <div class="modal-icon" id="art-select"><img src="img\arts\agnus\artAgnusBlank1.png" alt="Agnus Art Icon"></div>
-                                <div class="modal-icon" id="art-select"><img src="img\arts\agnus\artAgnusBlank1.png" alt="Agnus Art Icon"></div>
+                                <div class="modal-icon" id="art-select"><img src="img\arts\recharge\art-agnus.png" alt="Agnus Art Icon"></div>
+                                <div class="modal-icon" id="art-select"><img src="img\arts\recharge\art-agnus.png" alt="Agnus Art Icon"></div>
+                                <div class="modal-icon" id="art-select"><img src="img\arts\recharge\art-agnus.png" alt="Agnus Art Icon"></div>
                             </div>
                         </div>
                     </div>
@@ -206,20 +206,35 @@
                         <div id="normalArts">
                             <div id="artContainerRight">
                                 <h1 class="info-text-2">Blank</h1>
-                                <div class="artSlot" onclick="openArtMenu(this)" data-art-type="keves"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 1"></div>
+                                <div class="artSlot" id="art-class-1" data-art-type="keves" alt="Class Art 1">
+                                    <img class="art-features" src="img\arts\recharge\art-keves.png">
+                                    <img class="art-features" src="img\arts\type\art-attack.png">
+                                    <img class="art-features" src="img\arts\reaction\art-break.png">
+                                    <img class="art-features" src="img\arts\aoe\art-aoe-attack.png">
+                                </div>
                             </div>
                             <div id="artContainerLeft">
                                 <h1 class="info-text-2">Blank</h1>
-                                <div class="artSlot" onclick="openArtMenu(this)" data-art-type="keves"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 2"></div>
+                                <div class="artSlot" id="art-class-2" data-art-type="keves" alt="Class Art 2">
+                                    <img class="art-features" src="img\arts\recharge\art-keves.png">
+                                    <img class="art-features" src="img\arts\type\art-attack.png">
+                                    <img class="art-features" src="img\arts\reaction\art-break.png">
+                                    <img class="art-features" src="img\arts\aoe\art-aoe-attack.png">
+                                </div>
                             </div>
                             <div id="artContainerRight">
                                 <h1 class="info-text-2">Blank</h1>
-                                <div class="artSlot" onclick="openArtMenu(this)" data-art-type="keves"><img src="img\arts\keves\artKevesBlank.png" alt="Class Art 3"></div>
+                                <div class="artSlot" id="art-class-3" data-art-type="keves" alt="Class Art 3">
+                                    <img class="art-features" src="img\arts\recharge\art-keves.png">
+                                    <img class="art-features" src="img\arts\type\art-attack.png">
+                                    <img class="art-features" src="img\arts\reaction\art-break.png">
+                                    <img class="art-features" src="img\arts\aoe\art-aoe-attack.png">
+                                </div>
                             </div>
                         </div>
                         <div id="artContainerLeft">
                             <div id="talentArt">
-                                <div class="talentSlot"><img src="img\arts\keves\artKevesBlank.png" alt="Talent Art"></div>
+                                <div class="talentSlot"><img src="img\arts\recharge\art-keves.png" alt="Talent Art"></div>
                                 <h1 class="info-text-2">Blank</h1>
                             </div>
                         </div>
@@ -231,9 +246,9 @@
                                 <span class="close" id="art-keves-close">&times;</span>
                             </header>
                             <div class="class-list">
-                                <div class="modal-icon" id="art-select"><img src="img\arts\keves\artKevesBlank1.png" alt="Keves Art Icon"></div>
-                                <div class="modal-icon" id="art-select"><img src="img\arts\keves\artKevesBlank1.png" alt="Keves Art Icon"></div>
-                                <div class="modal-icon" id="art-select"><img src="img\arts\keves\artKevesBlank1.png" alt="Keves Art Icon"></div>
+                                <div class="modal-icon" id="art-select"><img src="img\arts\recharge\art-keves.png" alt="Keves Art Icon"></div>
+                                <div class="modal-icon" id="art-select"><img src="img\arts\recharge\art-keves.png" alt="Keves Art Icon"></div>
+                                <div class="modal-icon" id="art-select"><img src="img\arts\recharge\art-keves.png" alt="Keves Art Icon"></div>
                             </div>
                         </div>
                     </div>
