--- a/index.html
+++ b/index.html
@@ -177,78 +177,43 @@
                 <div id="arts">
                     <div id="masterArts">
                         <div id="artContainerLeft">
-                            <div class="artSlot" data-art-type="agnus"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 1"></div>
-                            <h1 class="info-text-2">Blank</h1>
+                            <div class="artSlot" data-art-type="master"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 1"></div>
+                            <h1 class="info-text-arts">Blank</h1>
                         </div>
                         <div id="artContainerRight">
-                            <div class="artSlot" data-art-type="agnus"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 2"></div>
-                            <h1 class="info-text-2">Blank</h1>
+                            <div class="artSlot" data-art-type="master"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 2"></div>
+                            <h1 class="info-text-arts">Blank</h1>
                         </div>
                         <div id="artContainerLeft">
-                            <div class="artSlot" data-art-type="agnus"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 3"></div>
-                            <h1 class="info-text-2">Blank</h1>
-                        </div>
-                    </div>
-                    <div class="classMenu" id="art-agnus-modal">
-                        <div class="classMenuContent">
-                            <header class="classMenuHeader">
-                                <h2>Agnus Art Select</h2>
-                                <span class="close" id="art-agnus-close">&times;</span>
-                            </header>
-                            <div class="class-list">
-                                <div class="modal-icon" id="art-select"><img src="img\arts\recharge\art-agnus.png" alt="Agnus Art Icon"></div>
-                                <div class="modal-icon" id="art-select"><img src="img\arts\recharge\art-agnus.png" alt="Agnus Art Icon"></div>
-                                <div class="modal-icon" id="art-select"><img src="img\arts\recharge\art-agnus.png" alt="Agnus Art Icon"></div>
-                            </div>
+                            <div class="artSlot" data-art-type="master"><img src="img\arts\recharge\art-agnus.png" alt="Master Art 3"></div>
+                            <h1 class="info-text-arts">Blank</h1>
                         </div>
                     </div>
                     <div id="classArts">
                         <div id="normalArts">
                             <div id="artContainerRight">
-                                <h1 class="info-text-2">Blank</h1>
-                                <div class="artSlot" id="art-class-1" data-art-type="keves" alt="Class Art 1">
+                                <h1 class="info-text-arts">Blank</h1>
+                                <div class="artSlot" id="art-class-1" data-art-type="class" alt="Class Art 1">
                                     <img class="art-features" src="img\arts\recharge\art-keves.png">
-                                    <img class="art-features" src="img\arts\type\art-attack.png">
-                                    <img class="art-features" src="img\arts\reaction\art-break.png">
-                                    <img class="art-features" src="img\arts\aoe\art-aoe-attack.png">
                                 </div>
                             </div>
                             <div id="artContainerLeft">
-                                <h1 class="info-text-2">Blank</h1>
-                                <div class="artSlot" id="art-class-2" data-art-type="keves" alt="Class Art 2">
+                                <h1 class="info-text-arts">Blank</h1>
+                                <div class="artSlot" id="art-class-2" data-art-type="class" alt="Class Art 2">
                                     <img class="art-features" src="img\arts\recharge\art-keves.png">
-                                    <img class="art-features" src="img\arts\type\art-attack.png">
-                                    <img class="art-features" src="img\arts\reaction\art-break.png">
-                                    <img class="art-features" src="img\arts\aoe\art-aoe-attack.png">
                                 </div>
                             </div>
                             <div id="artContainerRight">
-                                <h1 class="info-text-2">Blank</h1>
-                                <div class="artSlot" id="art-class-3" data-art-type="keves" alt="Class Art 3">
+                                <h1 class="info-text-arts">Blank</h1>
+                                <div class="artSlot" id="art-class-3" data-art-type="class" alt="Class Art 3">
                                     <img class="art-features" src="img\arts\recharge\art-keves.png">
-                                    <img class="art-features" src="img\arts\type\art-attack.png">
-                                    <img class="art-features" src="img\arts\reaction\art-break.png">
-                                    <img class="art-features" src="img\arts\aoe\art-aoe-attack.png">
                                 </div>
                             </div>
                         </div>
                         <div id="artContainerLeft">
                             <div id="talentArt">
                                 <div class="talentSlot"><img src="img\arts\recharge\art-keves.png" alt="Talent Art"></div>
-                                <h1 class="info-text-2">Blank</h1>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="classMenu" id="art-keves-modal">
-                        <div class="classMenuContent">
-                            <header class="classMenuHeader">
-                                <h2>Keves Art Select</h2>
-                                <span class="close" id="art-keves-close">&times;</span>
-                            </header>
-                            <div class="class-list">
-                                <div class="modal-icon" id="art-select"><img src="img\arts\recharge\art-keves.png" alt="Keves Art Icon"></div>
-                                <div class="modal-icon" id="art-select"><img src="img\arts\recharge\art-keves.png" alt="Keves Art Icon"></div>
-                                <div class="modal-icon" id="art-select"><img src="img\arts\recharge\art-keves.png" alt="Keves Art Icon"></div>
+                                <h1 class="info-text-arts">Blank</h1>
                             </div>
                         </div>
                     </div>
