Added full list of class Talent Arts and character-exlusive Talent Arts. Talent Art menu added

--- a/index.html
+++ b/index.html
@@ -210,9 +210,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div id="artContainerLeft">
+                        <div id="artContainerTalent">
                             <div id="talentArt">
-                                <div class="talentSlot"><img src="img\arts\recharge\art-keves.png" alt="Talent Art"></div>
+                                <div class="talentSlot" id="talentArtIcon">
+                                    <img src="img\arts\recharge\art-keves.png" alt="Talent Art">
+                                </div>
                                 <h1 class="info-text-arts">Blank</h1>
                             </div>
                         </div>
