Added the full list of Master Skills. Added Master Skill menu and selection. Master Skills are saved to local storage

--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@
                 </div>
                 <div id="skills">
                     <div id="classSkills">
-                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Class Skill 1"></div>
-                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Class Skill 2"></div>
-                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Class Skill 3"></div>
-                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Class Skill 4"></div>
+                        <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="Cypher Edge"><img src="img\skills\skill-4.png" alt="Class Skill 1"></div>
+                        <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="Sharp Eye"><img src="img\skills\skill-9.png" alt="Class Skill 2"></div>
+                        <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="Covert Attack"><img src="img\skills\skill-13.png" alt="Class Skill 3"></div>
+                        <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="Inspirit"><img src="img\skills\skill-11.png" alt="Class Skill 4"></div>
                     </div>
                     <div id="masterSkills">
-                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Master Skill 1"></div>
-                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Master Skill 2"></div>
-                        <div class="skillSlot"><img src="img\skills\skillSlot.png" alt="Master Skill 3"></div>
+                        <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="None"><img src="img\skills\skill-0.png" alt="Master Skill 1"></div>
+                        <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="None"><img src="img\skills\skill-0.png" alt="Master Skill 2"></div>
+                        <div class="skillSlot" data-toggle="tooltip" data-placement="top" title="None"><img src="img\skills\skill-0.png" alt="Master Skill 3"></div>
                     </div>
                 </div>
                 <div id="arts">
