Characters can now switch Classes. Class Arts are changed to the first three Arts in the list of Arts for that Class when changing Classes

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                             </div>
                         </div>
                         <div id="classInfo">
-                            <h1 class="info-text-1">Swordfighter</h1>
+                            <h1 class="info-text-1" id="class-name">Swordfighter</h1>
                             <p class="info-text-1">Rank: 20</p>
                         </div>
                     </div>
