Updated Class icons to include role color and Keves/Agnus symbols

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <section id="bottom">
                 <div id="info">
                     <div id="class">
-                        <div class="classIcon" id="classButton"><img src="img\classes\Swordfighter.png" alt="Class Icon"></div>
+                        <div class="classIcon" id="classButton"><img src="img\classes\class-slot.png" alt="Class Icon"></div>
                         <div class="classMenu" id="classModal">
                             <div class="classMenuContent">
                                 <header class="classMenuHeader">
