Began work on Gem selection menu. Changed modal menu background

--- a/index.html
+++ b/index.html
@@ -131,6 +131,15 @@
                         <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 2"></div>
                         <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 3"></div>
                     </div>
+                    <div class="gemsMenu" id="gemsModal">
+                        <div class="gemsMenuContent">
+                            <header class="classMenuHeader">
+                                <h2>Menu</h2>
+                                <span class="close" id="class-close">&times;</span>
+                            </header>
+                            <div class="gem-list" id="gemList"></div>
+                        </div>
+                    </div>
                     <div id="accessories">
                         <div class="accessory"><img src="img\equipment\accessories\accessory.png" alt="Accessory 1"></div>
                         <div class="accessory"><img src="img\equipment\accessories\accessory.png" alt="Accessory 2"></div>
@@ -226,6 +235,7 @@
         <script src="src/characters.js"></script>
         <script src="src/skills.js"></script>
         <script src="src/arts.js"></script>
+        <script src="src/equipment.js"></script>
         <script src="src/index.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
