Added character, class, and weapon stat values. Added formula to caclulate and display a character's stats based on their class. Added outline for damage formula

--- a/index.html
+++ b/index.html
@@ -36,39 +36,39 @@
                 <div id="stats">
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\HP.png" alt="HP"></div>
-                        <h1 class="info-text-2">5245</h1>
+                        <h1 class="stats-text">5245</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Attack.png" alt="Attack"></div>
-                        <h1 class="info-text-2">1021</h1>
+                        <h1 class="stats-text">1021</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Healing.png" alt="Healing Power"></div>
-                        <h1 class="info-text-2">128</h1>
+                        <h1 class="stats-text">128</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Dexterity.png" alt="Dexterity"></div>
-                        <h1 class="info-text-2">372</h1>
+                        <h1 class="stats-text">372</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Agility.png" alt="Agility"></div>
-                        <h1 class="info-text-2">182</h1>
+                        <h1 class="stats-text">182</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Critical.png" alt="Critical Rate"></div>
-                        <h1 class="info-text-2">20%</h1>
+                        <h1 class="stats-text">20%</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Block.png" alt="Block Rate"></div>
-                        <h1 class="info-text-2">10%</h1>
+                        <h1 class="stats-text">10%</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Physical.png" alt="Physical Defense"></div>
-                        <h1 class="info-text-2">15%</h1>
+                        <h1 class="stats-text">15%</h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Ether.png" alt="Ether Defense"></div>
-                        <h1 class="info-text-2">15%</h1>
+                        <h1 class="stats-text">15%</h1>
                     </div>
                 </div>
                 <div id="statuses">
@@ -235,7 +235,9 @@
         <script src="src/characters.js"></script>
         <script src="src/skills.js"></script>
         <script src="src/arts.js"></script>
+        <script src="src/classes.js"></script>
         <script src="src/equipment.js"></script>
+        <script src="src/damage.js"></script>
         <script src="src/index.js"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
