Added accessory swapping menu. Rarity can be cycled through by right clicking an accessory in the menu. Right clicking an equipped accessory removes it

--- a/index.html
+++ b/index.html
@@ -141,9 +141,18 @@
                         </div>
                     </div>
                     <div id="accessories">
-                        <div class="accessory"><img src="img\equipment\accessories\accessory.png" alt="Accessory 1"></div>
-                        <div class="accessory"><img src="img\equipment\accessories\accessory.png" alt="Accessory 2"></div>
-                        <div class="accessory"><img src="img\equipment\accessories\accessory.png" alt="Accessory 3"></div>
+                        <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 1"></div>
+                        <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 2"></div>
+                        <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 3"></div>
+                    </div>
+                    <div class="accessoriesMenu" id="accessoriesModal">
+                        <div class="accessoriesMenuContent">
+                            <header class="classMenuHeader">
+                                <h2>Menu</h2>
+                                <span class="close" id="class-close">&times;</span>
+                            </header>
+                            <div class="accessory-list" id="accessoryList"></div>
+                        </div>
                     </div>
                 </div>
             </section>
