--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
         <section id="statCalculator">
             <section id="party">
                 <div id="characters">
-                    <div class="icon" id="buttonNoah" onclick="menuSwap(this)" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Noah"><img src="img\party\NoahParty.png" alt="Icon 1"></div>
-                    <div class="icon" id="buttonMio" onclick="menuSwap(this)" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Mio"><img src="img\party\MioParty.png" alt="Icon 2"></div>
-                    <div class="icon" id="buttonEunie" onclick="menuSwap(this)" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Eunie"><img src="img\party\EunieParty.png" alt="Icon 3"></div>
-                    <div class="icon" id="buttonTaion" onclick="menuSwap(this)" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Taion"><img src="img\party\TaionParty.png" alt="Icon 4"></div>
-                    <div class="icon" id="buttonLanz" onclick="menuSwap(this)" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Lanz"><img src="img\party\LanzParty.png" alt="Icon 5"></div>
-                    <div class="icon" id="buttonSena" onclick="menuSwap(this)" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Sena"><img src="img\party\SenaParty.png" alt="Icon 6"></div>
-                    <div class="icon" id="buttonHero" onclick="menuSwap(this)" data-character-type="hero" data-toggle="tooltip" data-placement="bottom" title="Ethel"><img src="img\party\heroes\EthelParty.png" id="buttonHeroImg" alt="Icon 7"></div>
+                    <div class="icon" id="buttonNoah" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Noah"><img src="img\party\NoahParty.png" alt="Icon 1"></div>
+                    <div class="icon" id="buttonMio" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Mio"><img src="img\party\MioParty.png" alt="Icon 2"></div>
+                    <div class="icon" id="buttonEunie" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Eunie"><img src="img\party\EunieParty.png" alt="Icon 3"></div>
+                    <div class="icon" id="buttonTaion" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Taion"><img src="img\party\TaionParty.png" alt="Icon 4"></div>
+                    <div class="icon" id="buttonLanz" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Lanz"><img src="img\party\LanzParty.png" alt="Icon 5"></div>
+                    <div class="icon" id="buttonSena" data-character-type="party" data-toggle="tooltip" data-placement="bottom" title="Sena"><img src="img\party\SenaParty.png" alt="Icon 6"></div>
+                    <div class="icon" id="buttonHero" data-character-type="hero" data-toggle="tooltip" data-placement="bottom" title="Ethel"><img src="img\party\heroes\EthelParty.png" id="buttonHeroImg" alt="Icon 7"></div>
                 </div>
                 <div id="fr-toggle">
                     <div class="fr-button" id="fr-toggle-button"><img src="img\fr-toggle.png" alt="Future Redeemed Toggle"></div>
