Added gem names to UI. Fixed issue where gems and accessories would not save prior to activating Unlimited Sword

--- a/index.html
+++ b/index.html
@@ -127,9 +127,18 @@
                 </div>
                 <div id="equipment">
                     <div id="gems">
-                        <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 1"></div>
-                        <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 2"></div>
-                        <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 3"></div>
+                        <div class= "gemContainer">
+                            <h1 class= "info-text-3 gem-text">None</h1>
+                            <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 1"></div>
+                        </div>
+                        <div class= "gemContainer">
+                            <h1 class= "info-text-3 gem-text">None</h1>
+                            <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 2"></div>
+                        </div>
+                        <div class= "gemContainer">
+                            <h1 class= "info-text-3 gem-text">None</h1>
+                            <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 3"></div>
+                        </div>
                     </div>
                     <div class="gemsMenu" id="gemsModal">
                         <div class="gemsMenuContent">
