Added framing, backgrounds, and names for the current character's portrait

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
             </section>
             <section id="center">
                 <div id="characterPortrait">
+                    <div class="portrait"><img src="img\portraits\portrait-bg.png" alt="Portrait Background"></div>
                     <div class="portrait"><img id="currentCharacter" src="img\portraits\NoahPortrait.png" alt="Character Portrait"></div>
+                    <div class="portrait"><img src="img\portraits\portrait-fg.png" alt="Portrait Foreground"></div>
+                    <h1 class="portrait-text" id="character-name">Noah</h1>
                 </div>
                 <div id="stats">
                     <div id="stat-container">
@@ -250,6 +253,9 @@
             </section>
         </section>
 
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="src/characters.js"></script>
         <script src="src/skills.js"></script>
         <script src="src/arts.js"></script>
@@ -257,9 +263,6 @@
         <script src="src/equipment.js"></script>
         <script src="src/damage.js"></script>
         <script src="src/index.js"></script>
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
         <script>
             $(function () {
