Add buttons to each gem and accessory slot to remove them instead of having to right click them

--- a/index.html
+++ b/index.html
@@ -133,14 +133,17 @@
                         <div class= "gemContainer">
                             <h1 class= "info-text-3 gem-text">None</h1>
                             <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 1"></div>
+                            <span class="gem-remove" id="gem-1-remove">&times;</span>
                         </div>
                         <div class= "gemContainer">
                             <h1 class= "info-text-3 gem-text">None</h1>
                             <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 2"></div>
+                            <span class="gem-remove" id="gem-2-remove">&times;</span>
                         </div>
                         <div class= "gemContainer">
                             <h1 class= "info-text-3 gem-text">None</h1>
                             <div class="gem"><img src="img\equipment\gems\gemOutline.png" alt="Gem 3"></div>
+                            <span class="gem-remove" id="gem-3-remove">&times;</span>
                         </div>
                     </div>
                     <div class="gemsMenu" id="gemsModal">
@@ -153,9 +156,18 @@
                         </div>
                     </div>
                     <div id="accessories">
-                        <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 1"></div>
-                        <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 2"></div>
-                        <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 3"></div>
+                        <div class="accessory-container">
+                            <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 1"></div>
+                            <span class="accessory-remove" id="accessory-1-remove">&times;</span>
+                        </div>
+                        <div class="accessory-container">
+                            <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 2"></div>
+                            <span class="accessory-remove" id="accessory-2-remove">&times;</span>
+                        </div>
+                        <div class="accessory-container">
+                            <div class="accessory"><img src="img\equipment\accessories\accessory-slot.png" alt="Accessory 3"></div>
+                            <span class="accessory-remove" id="accessory-3-remove">&times;</span>
+                        </div>
                     </div>
                     <div class="accessoriesMenu" id="accessoriesModal">
                         <div class="accessoriesMenuContent">
