Written and tested the fundamental aspects of the damage formula, including the character's class and weapon stats, art damage ratio, critical hit multiplier, enemy defense, and random variance

--- a/index.html
+++ b/index.html
@@ -39,39 +39,39 @@
                 <div id="stats">
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\HP.png" alt="HP"></div>
-                        <h1 class="stats-text">5245</h1>
+                        <h1 class="stats-text"></h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Attack.png" alt="Attack"></div>
-                        <h1 class="stats-text">1021</h1>
+                        <h1 class="stats-text"></h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Healing.png" alt="Healing Power"></div>
-                        <h1 class="stats-text">128</h1>
+                        <h1 class="stats-text"></h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Dexterity.png" alt="Dexterity"></div>
-                        <h1 class="stats-text">372</h1>
+                        <h1 class="stats-text"></h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Agility.png" alt="Agility"></div>
-                        <h1 class="stats-text">182</h1>
+                        <h1 class="stats-text"></h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Critical.png" alt="Critical Rate"></div>
-                        <h1 class="stats-text">20%</h1>
+                        <h1 class="stats-text"></h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Block.png" alt="Block Rate"></div>
-                        <h1 class="stats-text">10%</h1>
+                        <h1 class="stats-text"></h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Physical.png" alt="Physical Defense"></div>
-                        <h1 class="stats-text">15%</h1>
+                        <h1 class="stats-text"></h1>
                     </div>
                     <div id="stat-container">
                         <div class="statIcon"><img src="img\stats\Ether.png" alt="Ether Defense"></div>
-                        <h1 class="stats-text">15%</h1>
+                        <h1 class="stats-text"></h1>
                     </div>
                 </div>
                 <div id="statuses">
